Changed nav and footer section tags from <div> to their proper tags.

--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -7,14 +7,14 @@
 
 	<body>
 		<!-- NAV -->
-		<div>
+		<nav>
 			<div>				
 				<a href="#home" id="link">Home</a>
 				<a href="#gallery">Gallery</a>
 				<a href="#videos">Videos</a>
 				<a href="#contact">Reservations</a>				
 			</div>
-		</div>
+		</nav>
 		<!-- END NAV -->
 		
 		<!-- HOME -->
@@ -201,9 +201,9 @@
 		<!-- END RSVP -->
 		
 		<!-- FOOTER -->
-		<div>
+		<footer>
 			www.treehousesltd.tree &nbsp;|&nbsp; &copy; 2024
-		</div>
+		</footer>
 		<!-- END FOOTER -->
 	
 	</body>
