One-Page-Website

--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Treehouses Ltd.</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="./css/one_page_website.css">
 	</head>
 
 	<body>
@@ -18,10 +19,10 @@
 		<!-- END NAV -->
 		
 		<!-- HOME -->
-		<div id="home">
+		<div class="home">
 			<div>
 				<div>
-					<span>The Perfect Treehouse</span>
+					<br><span>The Perfect Treehouse</span>
 				</div>
 			</div>
 		</div>
@@ -29,7 +30,7 @@
 		
 		<!-- GALLERY -->
 		<section>
-			<div id="gallery">
+			<div class="gallery">
 				<h1>Gallery</h1>
 				<div>
 				
@@ -38,9 +39,8 @@
 						<div>
 							<img src="./images/thumb/thumbnail_1.jpg" width="400" height ="350" alt="The well known Swiss Family Robinson Treehouse.">
 							<div>
-								<h3>Click to Enlarge</h3>
-								<p>We have several tree house options available. Book your consultation today!</p>
-							</div>
+								<br>
+							</div>	
 						</div>
 					</div>
 					<!-- END PHOTO CONTAINER 1 -->
@@ -50,8 +50,7 @@
 						<div>
 							<img src="./images/thumb/thumbnail_2.jpg" width="400" height ="350" alt="A grand entrace treehouse. Also handicap accessible">
 							<div>
-								<h3>Click to Enlarge</h3>
-								<p>We have several tree house options available. Book your consultation today!</p>
+								<br>
 							</div>
 						</div>
 					</div>
@@ -62,8 +61,7 @@
 						<div>
 							<img src="./images/thumb/thumbnail_3.jpg" width="400" height ="350" alt="Treehouse featuring a detached unit.">
 							<div>
-								<h3>Click to Enlarge</h3>
-								<p>We have several tree house options available. Book your consultation today!</p>
+								<br>
 							</div>
 						</div>
 					</div>
@@ -74,8 +72,7 @@
 						<div>
 							<img src="./images/thumb/thumbnail_4.jpg" width="400" height ="350" alt="Very spacious with plenty of windows.">
 							<div>
-								<h3>Click to Enlarge</h3>
-								<p>We have several tree house options available. Book your consultation today!</p>
+								<br>
 							</div>
 						</div>
 					</div>
@@ -84,10 +81,9 @@
 					<!-- PHOTO CONTAINER 5 -->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_5.jpg" width="400" height ="350" alt="A multistory treehouse with an upper balcony">
+							<img src="./images/thumb/thumbnail_5.jpg" width="400" height ="350" alt="A multistory treehouse with an upper balcony">							
 							<div>
-								<h3>Click to Enlarge</h3>
-								<p>We have several tree house options available. Book your consultation today!</p>
+								<br>
 							</div>
 						</div>
 					</div>
@@ -98,8 +94,7 @@
 						<div>
 							<img src="./images/thumb/thumbnail_6.jpg" width="400" height ="350" alt="A sprawling design with Nordic architectural influence.">
 							<div>
-								<h3>Click to Enlarge</h3>
-								<p>We have several tree house options available. Book your consultation today!</p>
+								<br>
 							</div>
 						</div>
 					</div>
@@ -110,8 +105,7 @@
 						<div>
 							<img src="./images/thumb/thumbnail_7.jpg" width="400" height ="350" alt="A economical design with an attic space.">
 							<div>
-								<h3>Click to Enlarge</h3>
-								<p>We have several tree house options available. Book your consultation today!</p>
+								<br>
 							</div>
 						</div>
 					</div>
@@ -122,8 +116,7 @@
 						<div>
 							<img src="./images/thumb/thumbnail_8.jpg" width="400" height ="350" alt="A futuristic, alien pine cone design.">
 							<div>
-								<h3>Click to Enlarge</h3>
-								<p>We have several tree house options available. Book your consultation today!</p>
+								<br>
 							</div>
 						</div>
 					</div>
@@ -134,8 +127,7 @@
 						<div>
 							<img src="./images/thumb/thumbnail_9.jpg" width="400" height ="350" alt="A tropical, open air, sea breaze paradise.">
 							<div>
-								<h3>Click to Enlarge</h3>
-								<p>We have several tree house options available. Book your consultation today!</p>
+								<br>
 							</div>
 						</div>
 					</div>
@@ -174,18 +166,18 @@
 					<h1>Reservations</h1>
 					<div>
 						<h4><span>Once you're in your treehouse, you'll never want to leaf.</span>
-							<br />Let us help you build it today!
+							<br>Let us help you build it today!
 						</h4>
 						<p>
 							Please provide us with your basic contact information.
 						</p>
 						<div>
 							<form action="" method ="post">
-								First name: <input class="rsvp" type="text" name="First Name"><br>
-								Last name: <input class="rsvp" type="text" name="Last Name"><br>
-								Email: <input class="rsvp" type="email" name="Email Address"><br>
-								Phone number: <input class="rsvp" type="text" name="Phone Number"><br>
-								Type of tree: <input class="rsvp" type="text" name="Tree Type">
+								First name:<br><input class="rsvp" type="text" name="First Name"><br>
+								Last name:<br><input class="rsvp" type="text" name="Last Name"><br>
+								Email:<br><input class="rsvp" type="email" name="Email Address"><br>
+								Phone number:<br><input class="rsvp" type="text" name="Phone Number"><br>
+								Type of tree:<br><input class="rsvp" type="text" name="Tree Type">
 								<div class="form-spacer">
 									<label class="terms">Terms and Conditions</label>
 								</div>
