Added resume and linkedin

--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -16,7 +16,7 @@
             <a class="active" href="#Home">Home</a>
             <a href="#Slideshow">Slideshow</a>
             <a href="#About">About</a>
-            <a href="#GitHub">GitHub</a>
+            <a href="#Links">Links</a>
             <a onclick="openForm()" ondblclick="closeForm()" class="contact">Contact</a>
         </div>
 
@@ -117,14 +117,16 @@
         </div>
 
         <!-- GitHub section -->
-        <div class="Row" id="GitHub">
+        <div class="Row" id="Links">
             <!-- Left Column -->
             <div class="Column_1">
-                <h1>GitHub</h1>
-                <p>
-                    You can view my coding projects on my GitHub profile here:
+                <h1>Important Links</h1>
+                <p class="center">
+                    Here are some links to my pages:
                     <br>
-                    <p class="center"><a href="https://github.com/NM-Daniel/" target="_blank">Nathan Maupin GitHub</a></p> 
+                    <p class="center"><a href="https://github.com/NM-Daniel/" target="_blank">GitHub</a></p>                   
+                    <p class="center"><a href="https://linkedin.com/in/nathanmaupin" target="_blank">LinkedIn</a></p>            
+                    <p class="center"><a href="https://docs.google.com/document/d/1WakFehCEkKz4pCfsQiLuGZcOjpuveqAvguLb1NL5Mns/edit" target="_blank">Resume</a></p> 
                 </p>
             </div>
             <!-- Right Column -->
